force-app/main/default/objects/Donor__c/fields/Amount_Donated__c.field-meta.xml
<CustomField>
    <fullName>Amount_Donated__c</fullName>
    <inlineHelpText>Provide value in case of Cash(in Rupees) or Blood donations(in units).</inlineHelpText>
    <label>Amount Donated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>