force-app/main/default/objects/Donor__c/fields/Anonymous_Donor__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Donor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if the Donor wants to stay anonymous</inlineHelpText>
    <label>Anonymous Donor</label>
    <type>Checkbox</type>
</CustomField>