force-app/main/default/objects/Donor__c/fields/Blood_Group__c.field-meta.xml
<CustomField>
    <fullName>Blood_Group__c</fullName>
    <inlineHelpText>Select the appropriate Blood Group in case of Blood donation.</inlineHelpText>
    <label>Blood Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Blood_Group</valueSetName>
    </valueSet>
</CustomField>