force-app/main/default/objects/Donor__c/fields/Donation_Description__c.field-meta.xml
<CustomField>
    <fullName>Donation_Description__c</fullName>
    <label>Donation Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>