force-app/main/default/objects/Donor__c/fields/Donor_Type__c.field-meta.xml
<CustomField>
    <fullName>Donor_Type__c</fullName>
    <label>Donor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Donor_Type</valueSetName>
    </valueSet>
</CustomField>